--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "src/*"
+      - "src/**"
       - "setup.cfg"
       - "setup.py"
       - "pyproject.toml"
