--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = rapids_env_generator
+name = rapids-env-generator
 version = attr: rapids_env_generator._version.__version__
 author = AJ Schmidt
 author_email = aschmidt@nvidia.com
@@ -22,4 +22,4 @@ where=src
 
 [options.entry_points]
 console_scripts =
-    reg = rapids_env_generator.cli:main
+    rapids-env-generator = rapids_env_generator.cli:main
