update CLI instance names

--- a/.github/workflows/build-test-publish.yaml
+++ b/.github/workflows/build-test-publish.yaml
@@ -39,7 +39,7 @@ jobs:
             pip uninstall -y rapids_env_generator
             pip install "$PKG"
             pytest
-            reg -h # test CLI output
+            rapids-env-generator -h # test CLI output
           done
       - name: Tar dist/ folder
         run: tar -czf ${{ env.RELEASE_FILE_NAME }} -C ./dist .
