--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,6 +10,7 @@ on:
       - "setup.py"
       - "pyproject.toml"
       - ".github/workflows/release.yaml"
+      - ".github/workflows/build-test-publish.yaml"
 
 jobs:
   build-test-release:
