--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = rapids-env-generator
 version = attr: rapids_env_generator._version.__version__
-author = AJ Schmidt
-author_email = aschmidt@nvidia.com
-url = https://github.com/rapidsai
+author = RAPIDS Development Team
+author_email = pypi@rapids.ai
+url = https://github.com/rapidsai/rapids-env-generator
 description = Tool for generating RAPIDS environment files
 license = Apache 2.0
 classifiers =
