add long_description to fix twine errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ author = RAPIDS Development Team
 author_email = pypi@rapids.ai
 url = https://github.com/rapidsai/rapids-env-generator
 description = Tool for generating RAPIDS environment files
+long_description = See [github.com/rapidsai/rapids-env-generator](https://github.com/rapidsai/rapids-env-generator) for the latest usage instructions.
+long_description_content_type='text/markdown'
 license = Apache 2.0
 classifiers =
     License :: OSI Approved :: Apache Software License
