update README and CLI name

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,4 +24,4 @@ where=src
 
 [options.entry_points]
 console_scripts =
-    rapids-env-generator = rapids_env_generator.cli:main
+    rapids-dep-file-generator = rapids_env_generator.cli:main
