--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,11 @@ where=src
 [options.entry_points]
 console_scripts =
     rapids-dependency-file-generator = rapids_dependency_file_generator.cli:main
+
+[flake8]
+max-line-length = 120
+select = E,F,W
+ignore = E123,E126,E203,E226,E241,E704,W503,W504
+
+[isort]
+profile=black
