--- a/tests/examples/matrix/output/expected/all_cuda-115_arch-arm64_py-38.yaml
+++ b/tests/examples/matrix/output/expected/all_cuda-115_arch-arm64_py-38.yaml
@@ -4,13 +4,9 @@ channels:
 - rapidsai
 - conda-forge
 dependencies:
-- black=22.3.0
 - clang-tools=11.1.0
-- clang=11.1.0
-- cuda-python>=11.5,<11.7.1
 - cudatoolkit=11.5
-- pytest
-- pytest-cov
-- some_arm11.5_dep
+- some_115_38_build_dep
 - spdlog>=1.8.5,<1.9
-name: all_cuda-115_arch-arm64
+- super_specific_dep
+name: all_cuda-115_arch-arm64_py-38
