--- a/tests/examples/matrix/output/expected/all_cuda-116_arch-arm64_py-38.yaml
+++ b/tests/examples/matrix/output/expected/all_cuda-116_arch-arm64_py-38.yaml
@@ -4,12 +4,7 @@ channels:
 - rapidsai
 - conda-forge
 dependencies:
-- black=22.3.0
 - clang-tools=11.1.0
-- clang=11.1.0
-- cuda-python>=11.6,<11.7.1
 - cudatoolkit=11.6
-- pytest
-- pytest-cov
 - spdlog>=1.8.5,<1.9
-name: all_cuda-116_arch-arm64
+name: all_cuda-116_arch-arm64_py-38
