--- a/tests/examples/matrix/output/expected/dev_cuda-115_arch-arm64_py-38.yaml
+++ b/tests/examples/matrix/output/expected/dev_cuda-115_arch-arm64_py-38.yaml
@@ -5,6 +5,8 @@ channels:
 - conda-forge
 dependencies:
 - clang-tools=11.1.0
-- cudatoolkit=11.6
+- cudatoolkit=11.5
+- some_115_38_build_dep
 - spdlog>=1.8.5,<1.9
-name: all_cuda-116_arch-x86_64_py-38
+- super_specific_dep
+name: dev_cuda-115_arch-arm64_py-38
