--- a/tests/examples/conda-minimal/output/expected/build_cuda-115_arch-x86_64.yaml
+++ b/tests/examples/conda-minimal/output/expected/build_cuda-115_arch-x86_64.yaml
@@ -4,7 +4,8 @@ channels:
 - rapidsai
 - conda-forge
 dependencies:
-- clang-tools=11.1.0
-- cudatoolkit=11.6
+- clang=11.1.0
+- cuda-python>=11.5,<11.7.1
+- cudatoolkit=11.5
 - spdlog>=1.8.5,<1.9
-name: all_cuda-116_arch-arm64_py-38
+name: build_cuda-115_arch-x86_64
