--- a/tests/examples/matrix/output/expected/dev_cuda-116_arch-x86_64_py-39.yaml
+++ b/tests/examples/matrix/output/expected/dev_cuda-116_arch-x86_64_py-39.yaml
@@ -4,8 +4,8 @@ channels:
 - rapidsai
 - conda-forge
 dependencies:
-- clang=11.1.0
-- cuda-python>=11.5,<11.7.1
-- cudatoolkit=11.5
+- clang-tools=11.1.0
+- cudatoolkit=11.6
+- some_amd64_39_build_dep
 - spdlog>=1.8.5,<1.9
-name: all_cuda-115_arch-x86_64
+name: dev_cuda-116_arch-x86_64_py-39
