--- a/tests/examples/requirements-minimal/dependencies.yaml
+++ b/tests/examples/requirements-minimal/dependencies.yaml
@@ -11,29 +11,32 @@ channels:
   - rapidsai
   - conda-forge
 dependencies:
-  - output_types: [conda, requirements]
+  build:
     common:
-      build:
-        - clang=11.1.0
+      - output_types: [conda, requirements]
+        packages:
+          - clang=11.1.0
+      - output_types: requirements
+        packages:
+          - spdlog>=1.8.5,<1.9
     specific:
-      - matrix:
-          cuda: "11.5"
-        build:
-          - cuda-python>=11.5,<11.7.1
-      - matrix:
-          cuda: "11.6"
-        build:
-          - cuda-python>=11.6,<11.7.1
-  - output_types: requirements
-    common:
-      build:
-        - spdlog>=1.8.5,<1.9
-    specific:
-      - matrix:
-          cuda: "11.5"
-        build:
-          - cudatoolkit=11.5
-      - matrix:
-          cuda: "11.6"
-        build:
-          - cudatoolkit=11.6
+      - output_types: [conda, requirements]
+        matrices:
+          - matrix:
+              cuda: "11.5"
+            packages:
+              - cuda-python>=11.5,<11.7.1
+          - matrix:
+              cuda: "11.6"
+            packages:
+              - cuda-python>=11.6,<11.7.1
+      - output_types: requirements
+        matrices:
+          - matrix:
+              cuda: "11.5"
+            packages:
+              - cudatoolkit=11.5
+          - matrix:
+              cuda: "11.6"
+            packages:
+              - cudatoolkit=11.6
