--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -3,6 +3,10 @@ name: prs
 on:
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-test:
     uses: ./.github/workflows/build-test-publish.yaml
