--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,8 +13,21 @@ on:
       - ".github/workflows/build-test-publish.yaml"
 
 jobs:
-  build-test-release:
-    uses: ./.github/workflows/build-test-publish.yaml
-    with:
-      RELEASE: true
-    secrets: inherit
+  build-test:
+    uses: ./.github/workflows/build-test.yaml
+  release:
+    needs: build-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx semantic-release
