Migrate isort config to pyproject.toml and flake8 to .flake8.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,6 @@ packages = { "find" = { where = ["src"] } }
 
 [tool.setuptools.dynamic]
 version = {attr = "rapids_dependency_file_generator._version.__version__"}
+
+[tool.isort]
+profile = black
