--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,6 @@ on:
       - "setup.py"
       - "pyproject.toml"
       - ".github/workflows/release.yaml"
-      - ".github/workflows/build-test-publish.yaml"
 
 jobs:
   build-test:
@@ -30,4 +29,6 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+        run: |
+          npm install @semantic-release/exec@6 -D
+          npx semantic-release@19
