--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -9,4 +9,10 @@ concurrency:
 
 jobs:
   build-test:
-    uses: ./.github/workflows/build-test.yaml
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: ./.github/workflows/build-test.yaml
