--- a/.github/actions/build-test/action.yml
+++ b/.github/actions/build-test/action.yml
@@ -6,10 +6,13 @@ runs:
       with:
         python-version: "3.10"
     - name: Install Python Packages
+      shell: bash
       run: pip install build pytest
     - name: Build Python Package
+      shell: bash
       run: python -m build .
     - name: Test Python Packages
+      shell: bash
       run: |
         #!/bin/bash
         for PKG in dist/*; do
