--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -15,4 +15,4 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: ./.github/workflows/build-test.yaml
+      - uses: ./.github/actions/build-test
