--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: ./.github/workflows/build-test.yaml
+      - uses: ./.github/actions/build-test
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
