use `semantic-release` hooks for PyPI publish

--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -6,3 +6,4 @@ plugins:
   - "@semantic-release/github"
   - - "@semantic-release/exec"
     - prepareCmd: ./ci/update-version.sh ${nextRelease.version}
+      publishCmd: ./ci/pypi-publish.sh
