--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,16 +24,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-      - name: GH Release
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PYPI_TOKEN: ${{ secrets.RAPIDSAI_PYPI_TOKEN }}
         run: |
           npm install @semantic-release/exec@6 -D
           npx semantic-release@19
-      - name: PyPI Release
-        run: |
-          twine upload \
-            --username __token__ \
-            --password ${{ secrets.RAPIDSAI_PYPI_TOKEN }} \
-            --disable-progress-bar \
-            dist/*
