--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -15,4 +15,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: ./.github/actions/build-test
+      - uses: ./.github/actions/setup-python
+      - name: Build & Test
+        run: ./ci/build-test.sh
