--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -3,7 +3,8 @@ branches:
 plugins:
   - "@semantic-release/commit-analyzer"
   - "@semantic-release/release-notes-generator"
-  - "@semantic-release/github"
+  - - "@semantic-release/github"
+    - addReleases: top
   - - "@semantic-release/exec"
     - verifyReleaseCmd: ./ci/update-version.sh ${nextRelease.version} && ./ci/build-test.sh
       publishCmd: ./ci/pypi-publish.sh
