--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,3 +30,7 @@ repos:
       - id: flake8
         args:
         - --show-source
+  - repo: https://github.com/sirosen/check-jsonschema
+    rev: 0.19.2
+    hooks:
+        - id: check-github-workflows
