feat: Validate dependencies.yaml using jsonschema (#29)
This PR enables validating the contents of a dependencies.yaml file
directly without doing any processing. The schema is encoded using [JSON
Schema](https://json-schema.org/) and validated using [the Python
implementation](https://python-jsonschema.readthedocs.io/). The new
Python code is fairly minimal, and it would be even shorter except that
I leveraged the object-oriented API to show all errors in a file instead
of simply showing the first error using `jsonschema.validate`. The
majority of the new lines are from the schema definition. The validation
is injected into the normal CLI usage so that schemas are always
validated before dependency files are generated, ensuring that
developers see useful errors about why their dependencies.yaml file is
invalid rather than opaque runtime errors when dfg fails to use the
file.

---------

Co-authored-by: Simon Adorf <sadorf@nvidia.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
         args:
           - --py38-plus
   - repo: https://github.com/PyCQA/isort
-    rev: '5.10.1'
+    rev: '5.12.0'
     hooks:
       - id: isort
   - repo: https://github.com/psf/black
@@ -30,3 +30,12 @@ repos:
       - id: flake8
         args:
         - --show-source
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.21.0
+    hooks:
+        - id: check-metaschema
+          files: ^src/rapids_dependency_file_generator/schema.json$
+        - id: check-jsonschema
+          files: ^tests/examples/([^/]*)/dependencies.yaml$
+          args: ["--schemafile", "src/rapids_dependency_file_generator/schema.json"]
+        - id: check-github-workflows
