--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,10 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
 ]
+requires-python = ">=3.8"
 dependencies = [
     "PyYAML",
+    "jsonschema",
 ]
 
 [project.scripts]
