--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          persist-credentials: false
       - uses: ./.github/actions/setup-python
       - name: Setup Node.js
         uses: actions/setup-node@v3
