fix: update version strings before building
I made this change erroneously in #35.

this fix ensures that the Python packages that are built have the correct versions associated with them.

--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -6,8 +6,7 @@ plugins:
   - - "@semantic-release/github"
     - addReleases: top
   - - "@semantic-release/exec"
-    - verifyReleaseCmd: ./ci/build-test.sh
-      prepareCmd: ./ci/update-versions.sh ${nextRelease.version}
+    - verifyReleaseCmd: ./ci/update-versions.sh ${nextRelease.version} && ./ci/build-test.sh
       publishCmd: ./ci/pypi-publish.sh
   - - "@semantic-release/git"
     - assets:
