ci: Ensure `ci-imgs` repo is only triggered when new releases occur
The `release.yaml` workflow currently triggers the `ci-imgs` repository to rebuild anytime a merge to `main` happens.

This PR makes the logic smarter by only triggering the `ci-imgs` repository to rebuild when an actual release occurs.

This will prevent `ci-imgs` rebuilds from occurring unnecessarily.

--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -8,6 +8,7 @@ plugins:
   - - "@semantic-release/exec"
     - verifyReleaseCmd: ./ci/update-versions.sh ${nextRelease.version} && ./ci/build-test.sh
       publishCmd: ./ci/pypi-publish.sh
+      successCmd: ./ci/semantic-release-success.sh
   - - "@semantic-release/git"
     - assets:
         - src/rapids_dependency_file_generator/_version.py
