--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    outputs:
+      RELEASE_PUBLISHED: ${{ steps.semantic-release.outputs.RELEASE_PUBLISHED }}
     permissions:
       contents: write # to be able to publish a GitHub release
       issues: write # to be able to comment on released issues
@@ -24,6 +26,7 @@ jobs:
         with:
           node-version: "lts/*"
       - name: Release
+        id: semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PYPI_TOKEN: ${{ secrets.RAPIDSAI_PYPI_TOKEN }}
@@ -31,6 +34,7 @@ jobs:
           npm install
           npx semantic-release
   trigger-pipeline:
+    if: needs.release.outputs.RELEASE_PUBLISHED == 'true'
     runs-on: ubuntu-latest
     needs: release
     steps:
