initial conda pkg commit

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -4,17 +4,9 @@ on:
   pull_request:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: pr-${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
   build-test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: ./.github/actions/setup-python
-      - name: Build & Test
-        run: ./ci/build-test.sh
+    uses: ./.github/workflows/build-test.yaml
