--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -12,11 +12,10 @@ jobs:
       - run: ./ci/build-test/conda.sh
   wheel:
     runs-on: ubuntu-latest
+    container: python:3
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
       - run: ./ci/build-test/wheel.sh
