pass `BUILD_VERSION` to build scripts & call `update-versions.sh`

--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -1,5 +1,8 @@
 on:
   workflow_call:
+    inputs:
+      build_version:
+        type: string
 
 jobs:
   conda:
@@ -10,6 +13,8 @@ jobs:
         with:
           fetch-depth: 0
       - run: ./ci/build-test/conda.sh
+        env:
+          BUILD_VERSION: ${{ inputs.version }}
   wheel:
     runs-on: ubuntu-latest
     container: python:3
@@ -19,3 +24,5 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v5
       - run: ./ci/build-test/wheel.sh
+        env:
+          BUILD_VERSION: ${{ inputs.version }}
