--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -18,6 +18,10 @@ jobs:
       - run: ./ci/build-test/conda.sh
         env:
           BUILD_VERSION: ${{ inputs.version }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: conda_artifacts
+          path: ${{ env.OUTPUT_DIR }}
   wheel:
     runs-on: ubuntu-latest
     container: python:3
@@ -29,3 +33,7 @@ jobs:
       - run: ./ci/build-test/wheel.sh
         env:
           BUILD_VERSION: ${{ inputs.version }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: wheel_artifacts
+          path: ${{ env.OUTPUT_DIR }}
