--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
       - run: ./ci/build-test/conda.sh
         env:
           BUILD_VERSION: ${{ inputs.version }}
@@ -29,6 +30,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
       - run: ./ci/build-test/wheel.sh
         env:
           BUILD_VERSION: ${{ inputs.version }}
