--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -6,11 +6,11 @@ plugins:
   - - "@semantic-release/github"
     - addReleases: top
   - - "@semantic-release/exec"
-    - verifyReleaseCmd: ./ci/update-versions.sh ${nextRelease.version} && ./ci/build-test.sh
-      publishCmd: ./ci/pypi-publish.sh
-      successCmd: ./ci/semantic-release-success.sh
+    - verifyReleaseCmd: ./ci/output-release-version.sh ${nextRelease.version}
+  - - "@semantic-release/exec"
+    - publishCmd: ./ci/publish/wheel.sh
+  - - "@semantic-release/exec"
+    - publishCmd: ./ci/publish/conda.sh
   - - "@semantic-release/git"
     - assets:
-        - src/rapids_dependency_file_generator/_version.py
-        - src/rapids_dependency_file_generator/schema.json
-        - package.json
+        - ./**/*
