make `build-test` release job conditional

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,6 +28,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
           DRY_RUN: "true"
   build-test:
+    if: ${{ needs.check-release.outputs.release_version }}
     needs: [check-release]
     uses: ./.github/workflows/build-test.yaml
     with:
