--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,41 +5,67 @@ on:
     branches:
       - main
 
+concurrency:
+  # Limit concurrency to avoid race conditions, but don't cancel in progress
+  # release since that could cause issues
+  group: release-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
-  release:
+  check-release:
     runs-on: ubuntu-latest
     outputs:
-      RELEASE_PUBLISHED: ${{ steps.semantic-release.outputs.RELEASE_PUBLISHED }}
+      release_version: ${{ steps.check-release.outputs.release_version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: false
-      - uses: ./.github/actions/setup-python
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: ./.github/actions/semantic-release
+        id: check-release
         with:
-          node-version: "lts/*"
-      - name: Release
-        id: semantic-release
-        env:
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+          DRY_RUN: "true"
+  build-test:
+    if: ${{ needs.check-release.outputs.release_version }}
+    needs: [check-release]
+    uses: ./.github/workflows/build-test.yaml
+    with:
+      release_version: ${{ needs.check-release.outputs.release_version }}
+  release:
+    needs: [check-release, build-test]
+    runs-on: ubuntu-latest
+    env:
+      CONDA_OUTPUT_DIR: /tmp/conda_output
+      WHEEL_OUTPUT_DIR: /tmp/wheel_output
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+      - name: Download Conda Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: conda_artifacts
+          path: ${{ env.CONDA_OUTPUT_DIR }}
+      - name: Download Wheel Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: wheel_artifacts
+          path: ${{ env.WHEEL_OUTPUT_DIR }}
+      - uses: ./.github/actions/semantic-release
+        with:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
           PYPI_TOKEN: ${{ secrets.RAPIDSAI_PYPI_TOKEN }}
-        run: |
-          npm install
-          npx semantic-release
-  trigger-pipeline:
-    if: needs.release.outputs.RELEASE_PUBLISHED == 'true'
-    runs-on: ubuntu-latest
-    needs: release
-    steps:
-      - name: Trigger Pipeline
+          ANACONDA_TOKEN: ${{ secrets.CONDA_RAPIDSAI_TOKEN }}
+      - name: Trigger CI Images
         env:
           GH_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
         run: |
           gh workflow run push.yaml \
-          --field upstream_job="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" \
+          --field upstream_job="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}" \
           --field upstream_repository=dependency-file-generator \
           --repo rapidsai/ci-imgs \
           --ref main
