--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 ]
 
 [project.scripts]
-rapids-dependency-file-generator = "rapids_dependency_file_generator.cli:main"
+rapids-dependency-file-generator = "rapids_dependency_file_generator._cli:main"
 
 [tool.setuptools]
 packages = { "find" = { where = ["src"] } }
