--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,20 +16,6 @@ repos:
       - id: pyupgrade
         args:
           - --py38-plus
-  - repo: https://github.com/PyCQA/isort
-    rev: '5.12.0'
-    hooks:
-      - id: isort
-  - repo: https://github.com/psf/black
-    rev: '22.10.0'
-    hooks:
-      - id: black
-  - repo: https://github.com/PyCQA/flake8
-    rev: '5.0.4'
-    hooks:
-      - id: flake8
-        args:
-        - --show-source
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.21.0
     hooks:
@@ -39,3 +25,10 @@ repos:
           files: ^tests/examples/([^/]*)/dependencies.yaml$
           args: ["--schemafile", "src/rapids_dependency_file_generator/schema.json"]
         - id: check-github-workflows
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.3.4
+    hooks:
+      - id: ruff
+        files: src/.*$
+      - id: ruff-format
+        files: src/.*$
