--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 ]
 
 [project.scripts]
-rapids-dependency-file-generator = "rapids_dependency_file_generator.cli:main"
+rapids-dependency-file-generator = "rapids_dependency_file_generator._cli:main"
 
 [tool.setuptools]
 packages = { "find" = { where = ["src"] } }
@@ -36,3 +36,12 @@ version = {attr = "rapids_dependency_file_generator._version.__version__"}
 
 [tool.isort]
 profile = "black"
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "D"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
