--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,13 @@ repos:
       - id: check-yaml
       - id: debug-statements
       - id: requirements-txt-fixer
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v1.10.0'
+    hooks:
+      - id: mypy
+        additional_dependencies: [types-PyYAML]
+        args: ["--config-file=pyproject.toml", "src/", "docs/"]
+        pass_filenames: false
   - repo: https://github.com/asottile/pyupgrade
     rev: 'v3.1.0'
     hooks:
@@ -32,3 +39,5 @@ repos:
         files: src/.*$
       - id: ruff-format
         files: src/.*$
+default_language_version:
+    python: python3.9
