--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ version = {attr = "rapids_dependency_file_generator._version.__version__"}
 [tool.isort]
 profile = "black"
 
+[tool.mypy]
+ignore_missing_imports = true
+
 [tool.ruff]
 line-length = 120
 
