--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: 'v4.3.0'
+    rev: 'v4.6.0'
     hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
@@ -10,14 +10,21 @@ repos:
       - id: check-yaml
       - id: debug-statements
       - id: requirements-txt-fixer
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v1.10.0'
+    hooks:
+      - id: mypy
+        additional_dependencies: [types-PyYAML]
+        args: ["--config-file=pyproject.toml", "src/", "docs/"]
+        pass_filenames: false
   - repo: https://github.com/asottile/pyupgrade
-    rev: 'v3.1.0'
+    rev: 'v3.15.2'
     hooks:
       - id: pyupgrade
         args:
           - --py38-plus
   - repo: https://github.com/python-jsonschema/check-jsonschema
-    rev: 0.21.0
+    rev: 0.28.3
     hooks:
         - id: check-metaschema
           files: ^src/rapids_dependency_file_generator/schema.json$
@@ -26,9 +33,11 @@ repos:
           args: ["--schemafile", "src/rapids_dependency_file_generator/schema.json"]
         - id: check-github-workflows
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.3.4
+    rev: v0.4.4
     hooks:
       - id: ruff
         files: src/.*$
       - id: ruff-format
         files: src/.*$
+default_language_version:
+    python: python3
