--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+ci:
+  autofix_commit_msg: "chore(ci): pre-commit auto fixes"
+  autoupdate_commit_msg: "chore(ci): pre-commit autoupdate"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: 'v4.6.0'
