chore(ci): add shellcheck to pre-commit (#139)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,5 +42,9 @@ repos:
         files: src/.*$
       - id: ruff-format
         files: src/.*$
+  - repo: https://github.com/shellcheck-py/shellcheck-py
+    rev: v0.10.0.1
+    hooks:
+      - id: shellcheck
 default_language_version:
     python: python3
