Use Conda's `matplotlib-base`
When installing Matplotlib with Conda, use `matplotlib-base`. This is more lightweight as it doesn't pull in a bunch of GUI bits that we don't use.

ref: https://conda-forge.org/docs/maintainer/knowledge_base/#matplotlib

--- a/tests/examples/overlapping-deps/dependencies.yaml
+++ b/tests/examples/overlapping-deps/dependencies.yaml
@@ -57,12 +57,13 @@ dependencies:
           - scikit-learn>=1.5
   test_python:
     common:
-      - output_types: [conda, requirements, pyproject]
+      - output_types: [requirements, pyproject]
         packages:
           - matplotlib
       - output_types: [conda]
         packages:
           - pip
+          - matplotlib-base
           # intentional overlap (numpy) with depends_on_numpy's pip list, to
           # test that pip dependencies don't have duplicates
           - pip:
