--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 ci:
   autofix_commit_msg: "chore(ci): pre-commit auto fixes"
   autoupdate_commit_msg: "chore(ci): pre-commit autoupdate"
+  autoupdate_schedule: quarterly
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: 'v6.0.0'
