--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -5,4 +5,4 @@
     language: python
     files: "dependencies.yaml"
     pass_filenames: false
-    args: [-Wunused-dependencies, -Werror]
+    args: [-Wall, -Werror]
