--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ requirements:
   host:
     - python >=3.9
     - python-build
-    - setuptools
+    - setuptools >=77.0.0
   run:
     - python >=3.9
     - pyyaml
