--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,14 @@ profile = "black"
 [tool.mypy]
 ignore_missing_imports = true
 
+[tool.pydistcheck]
+select = [
+    "distro-too-large-compressed",
+]
+
+# PyPI hard limit is 1GiB, but try to keep this as small as possible
+max_allowed_size_compressed = '2Mi'
+
 [tool.ruff]
 line-length = 120
 
